[workspace]
members = ["examples-rp2350", "xtask"]

[package]
name = "sen6x"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Robert Wiewel <dev@ducktec.de>"]
description = "A rust no-std driver for the SEN6X sensor modules."
keywords = [
    "sen6x",
    "sensor",
    "i2c",
    "embedded",
    "no-std",
    "sen66",
    "sen60",
    "sen63c",
    "sen65",
    "sen66",
    "sen68",
]
categories = ["embedded", "no-std"]
readme = "README.md"
repository = "https://github.com/ducktec/sen6x-rs"
documentation = "https://docs.rs/sen6x"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = { version = "0.3.10", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
crc = { version = "3.2.1" }
futures = { version = "0.3.31" }
log = "0.4.20"

[features]
default = ["sen66", "defmt"]
defmt = ["dep:defmt"]
async = []
sen60 = []
sen63c = []
sen65 = []
sen66 = []
sen68 = []

[package.metadata.docs.rs]
# Show async feature on docs.rs as well
all-features = true
