[package]
name = "examples-rp2350"
version = "0.1.0"
edition = "2024"

[dependencies]
sen6x = { path = "../", features = ["async", "defmt"] }

embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
] }
embassy-sync = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
] }
embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-usb = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
] }
embassy-net = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-net-wiznet = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0" }
embassy-usb-logger = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0" }
cyw43 = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "17301c0", features = [
    "defmt",
] }
embedded-hal = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.1"
rp235x-hal = { version = "0.3.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
    "defmt",
] }

[[bin]]
name = "sen66-read-async"
test = false
bench = false

[[bin]]
name = "sen66-read-blocking"
test = false
bench = false
